# frost-shard

./: .pre-commit-config.yaml  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/: renovate.json
.github/workflows/: ci.yml
docker/: Dockerfile  local.env  run.sh
frost_shard/: bootstrap.py  handlers.py  main.py  settings.py
frost_shard/auth/: api.py  dependencies.py  enums.py  exceptions.py  models.py  services.py
frost_shard/database/: connection.py  expressions.py  models.py  repository.py  sql_repository.py
frost_shard/database/migrations/: env.py
frost_shard/database/migrations/versions/: 686bce185858_.py  7d853a1b67b4_.py  81f162ea94c3_.py
frost_shard/database/sql/: connection.py  models.py  repository.py
frost_shard/database/sql/migrations/: env.py
frost_shard/database/sql/migrations/versions/: b87a69e90027_.py
frost_shard/domain/: crypto_service.py  file_service.py  models.py  permissions.py  repositories.py  repository.py  services.py  storage.py
frost_shard/internal/: api.py
frost_shard/storage/: aws.py
frost_shard/utils/: services.py
frost_shard/v1/: api.py  dependencies.py  filters.py
tests/: conftest.py
tests/e2e/: test_files_api.py  test_healthcheck_api.py  test_internal_api.py
tests/unit/: test_pagination.py
