[tool.poetry]
name = "frost-shard"
version = "0.1.0"
description = ""
authors = ["tobiaxs <piotr.tobiasz.dev@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.79.0"
structlog = "^21.5.0"
uvicorn = { extras = ["standard"], version = "^0.18.0" }
sqlmodel = "^0.0.6"
pydantic = { extras = ["email"], version = "^1.9.1" }
asyncpg = "^0.26.0"
alembic = "^1.8.0"
cryptography = "^37.0.2"
PyJWT = "^2.4.0"
backoff = "^2.1.2"
asgi-ratelimit = "^0.9.0"
sentry-sdk = "^1.6.0"
starlette-exporter = "^0.13.0"
python-multipart = "^0.0.5"
boto3 = "^1.24.27"

[tool.poetry.dev-dependencies]
pre-commit = "^2.19.0"
pytest = "^7.1.2"
wemake-python-styleguide = "^0.16.1"
pyproject-flake8 = "^0.0.1-alpha.4"
httpx = "^0.23.0"
pytest-asyncio = "^0.19.0"
pytest-cov = "^3.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 80

[tool.isort]
line_length = 80
profile = "black"
default_section = "THIRDPARTY"
known_first_party = ["frost_shard"]

[tool.flake8]
exclude = ".git,__pycache__,*/static/*,*/migrations/*,*/test_*/,*/versions/*"
ignore = "B008,B009,B010,D100,D104,D106,D107,DAR101,DAR201,DAR301,DAR401,WPS110,WPS115,WPS116,WPS305,WPS306,WPS332,WPS404,WPS428,WPS430,WPS431,WPS432,WPS433,WPS600"
max-line-length = 80
inline-quotes = '"'
per-file-ignores = """
    */conftest.py:WPS201,WPS442
"""

[tool.pytest.ini_options]
testpaths = "tests"
asyncio_mode = "strict"
addopts = "--strict-markers -vv --cache-clear --maxfail=1 --cov=frost_shard --cov-report=term --cov-report=html --cov-branch --cov-fail-under=1 --no-cov-on-fail"

[tool.coverage.report]
exclude_lines = ["# pragma: no cover", "Protocol", "if TYPE_CHECKING:"]
